<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_input"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pop_tvname"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:text="@string/pop_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pop_etname"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:minWidth="100dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pop_tvusername"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:text="@string/pop_user"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pop_etusername"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:minWidth="100dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pop_tvpass"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:text="@string/pop_pass"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pop_etpass"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:minWidth="100dip" />

    </LinearLayout>

</LinearLayout>