<?xml version="1.0" encoding="utf-8"?>
<com.cedar.mypass.Layout.SlideLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/item_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_title_name"
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regis_softname" />

            <TextView
                android:id="@+id/item_value_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_title_username"
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regis_name" />

            <TextView
                android:id="@+id/item_value_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regis_pass" />

            <TextView
                android:id="@+id/item_value_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/item_del"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="#ff0000"
        android:gravity="center"
        android:text="删除" />

</com.cedar.mypass.Layout.SlideLayout>